fix/ fix scrolls on firefox

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .navbar-root {
@@ -22,7 +23,7 @@
 }
 
 .children-root {
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: y proximity;
     height: 100vh;
     overflow: scroll;
 }
