--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -10,13 +10,10 @@
   background-color: green;
 }
 
-.scrollSnap {
-  scroll-snap-type: y mandatory;
-}
-
 .section1 {
   scroll-snap-align: start;
   scroll-snap-stop: always;
+  height: 100%;
 }
 
 .section2 {
