--- a/src/components/art-deco-card/styles.module.scss
+++ b/src/components/art-deco-card/styles.module.scss
@@ -78,7 +78,7 @@ $brass: #b6a644;
   background: black;
   padding: 0 10px;
   font-size: 0.6em;
-  bottom: 0px;
+  bottom: 3px;
 
   @media (max-width: $breakpoint-mobile) {
     font-size: 0.8em;
