--- a/src/components/mainFullScreen/grid/styles.module.scss
+++ b/src/components/mainFullScreen/grid/styles.module.scss
@@ -33,6 +33,7 @@ $base-speed: 12s;
   align-items: center;
   width: 150%;
   height: 100%;
+  max-height: 300px;
   position: absolute;
   perspective: 100px;
   perspective-origin: 49% 45%;
